[tool.poetry]
name = "teamlocker"
version = "0.1.0-dev"
description = "An invitation-based, data-hosting service for sharing your structured data with friends"
authors = ["Stephen Leach <sfkleach@gmail.com>", "Konstantinos Koutsilis <kkoutsilis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
